--- a/fly.toml
+++ b/fly.toml
@@ -1,41 +1,21 @@
 app = "echo-bot"
+
 kill_signal = "SIGINT"
 kill_timeout = 5
 primary_region = "iad"
-processes = []
 
 [build]
   builder = "heroku/buildpacks:20"
 
+# [deploy]
+#   release_command = "sh /usr/src/app/scripts/release.sh"
+
 [env]
-  PORT = "8043"
+  BOT_TOKEN = "$BOT_TOKEN"
+  CLIENT_ID = "$CLIENT_ID"
+  PRIMARY_REGION = "iad"
   NODE_ENV = "production"
 
 [experimental]
+  allowed_public_ports = []
   auto_rollback = true
-
-[[services]]
-  http_checks = []
-  internal_port = 8043
-  processes = ["app"]
-  protocol = "tcp"
-  script_checks = []
-  [services.concurrency]
-    hard_limit = 25
-    soft_limit = 20
-    type = "connections"
-
-  [[services.ports]]
-    force_https = true
-    handlers = ["http"]
-    port = 80
-
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
-
-  [[services.tcp_checks]]
-    grace_period = "1s"
-    interval = "15s"
-    restart_limit = 0
-    timeout = "2s"
